fix: overflow-yを設定してスクロールバーの互換性を向上

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -122,6 +122,12 @@ html {
     -moz-osx-font-smoothing: grayscale;
 }
 
+@supports not (scrollbar-gutter: stable) {
+    html {
+        overflow-y: scroll;
+    }
+}
+
 main {
     max-width: var(--max-width);
     margin: 0 auto;
